# hello-rocket

./: Cargo.toml  README.md
assets/pages/: 404.html  hello.html
src/: configuration.rs  email_api.rs  exchange_api.rs  lib.rs  main.rs  model.rs  rate_data.rs  response.rs  thread_pool.rs  worker.rs
static/: index.html  reset.css  style.css
