[package]
name = "exchanger"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "emailer"
path = "src/bin/emailer.rs"

[[bin]]
name = "fetcher"
path = "src/bin/fetcher.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.23"
regex = "1.7.0"
reqwest = {version = "0.11.13", features = ["blocking"]}
log = "0.4"
env_logger = "0.9"